refactor: improve CORS configuration with allowed origin patterns and expanded headers